--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego 2 ó 1</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <title>Juego 2 o 1</title>
 </head>
 <body>
-    <h1>Es hora de jugar</h1>
+    <h1>Juego 2 o 1</h1>
+    <label for="opciones">Elige 1 o 2:</label>
+    <select id="opciones">
+        <option value="1">1</option>
+        <option value="2">2</option>
+    </select>
+    <label for="rondas">Número de rondas:</label>
+    <input type="number" id="rondas" min="1" value="1">
+    <button id="jugar">Jugar</button>
+    <button id="reset">Reset</button>
+    <div id="resultados"></div>
 
-    <h2>Quien saque diferente gana!</h2>
-
-    
-
-    <script src="./JavaScript/main.js"></script>
+    <script src="/JavaScript/main.js"></script>
 </body>
 </html>
