--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Juego 2 o 1</title>
 </head>
 <body>
@@ -19,6 +18,6 @@
     <button id="reset">Reset</button>
     <div id="resultados"></div>
 
-    <script src="/JavaScript/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
