--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego 2 o 1</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Juego de 2 o 1</title>
 </head>
 <body>
-    <h1>Juego 2 o 1</h1>
-    <label for="input-rondas">Número de rondas:</label>
-    <input type="number" id="input-rondas" placeholder="Ingrese el número de rondas">
+  <div id="jugadores">
+    <h2>Ingrese los nombres de los jugadores:</h2>
+    <input type="text" id="jugador1" placeholder="Jugador 1">
+    <input type="text" id="jugador2" placeholder="Jugador 2">
+    <button id="empezarBtn">Empezar</button>
+  </div>
 
-    <div>
-        <button onclick="iniciarJuego()">Iniciar Juego</button>
-        <button onclick="resetearJuego()">Resetear Juego</button>
-    </div>
+  <div id="rondas" style="display: none;">
+    <h2>Seleccione el número de rondas:</h2>
+    <input type="number" id="numeroRondas" min="1" max="10" placeholder="Número de rondas (1-10)">
+    <button id="iniciarRondasBtn">Iniciar Rondas</button>
+  </div>
 
-    <div id="resultados-container"></div>
+  <div id="opcionesContainer"></div>
 
-    <script src="main.js"></script>
+  <div id="resultado"></div>
+
+  <button id="resetBtn" style="display: none;">Reiniciar Juego</button>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
